bugfix map expansion mobile web

--- a/web/maree-web/src/components/fluxmap/style.css
+++ b/web/maree-web/src/components/fluxmap/style.css
@@ -9,6 +9,7 @@
 
 .mapContainer {
 	flex: 1;
+	height: 100%;
 }
 
 .mapButton {
